--- a/client/scss/layout/_background.scss
+++ b/client/scss/layout/_background.scss
@@ -1,7 +1,7 @@
 .hero {
     background: url("/img/backgrounds/home_background.png") center / cover;
+    background-attachment: fixed;
     max-width: 100%;
-    height: 100%;
 }
 
 .container {
