set min background height to 100vh

--- a/client/scss/layout/_background.scss
+++ b/client/scss/layout/_background.scss
@@ -2,6 +2,7 @@
     background: url("/img/backgrounds/home_background.png") center / cover;
     background-attachment: fixed;
     max-width: 100%;
+    min-height: 100vh;
 }
 
 .container {
