--- a/client/scss/components/_questions.scss
+++ b/client/scss/components/_questions.scss
@@ -8,8 +8,7 @@ border: red 1px solid;
   box-shadow: 2px 4px 10px black;
   width: 40%;
   height: 10%;
-
-
+  top: 33%;
 }
 .speech-bubble :after {
 	content: '';
@@ -23,11 +22,68 @@ border: red 1px solid;
 	border-bottom: 0;
 	border-left: 0;
 	margin-left: -10px;
-  margin-bottom: -20px;
+  margin-bottom: -20px;  
+}
+  .radio {
+    right: 5%;
+    top: 3vh;
+    float: right;
+  }
+  form {
+    top: 66%;
+    position: relative;
+  }
+   
   
-}
-.radio {
-  float: right;
-  right: 5%;
-  top: 3vh;
-}
+  
+  .qDiv {
+    position: relative;
+    height: 100vh;
+    
+    
+  }
+  //   cursor: pointer;
+  //   display: inline-block;
+  //   float: right;
+  //   -webkit-user-select: none;
+  //   user-select: none;
+  //   &:not(:first-child) {
+  //     margin-left: 20px;
+  //   }
+  //   svg {
+  //     fill: none;
+  //     vertical-align: middle;
+  //     circle {
+  //       stroke-width: 2;
+  //       stroke: #c8ccd4;
+  //     }
+  //     path {
+  //       stroke: #008fff;
+  //       &.inner {
+  //         stroke-width: 6;
+  //         stroke-dasharray: 19;
+  //         stroke-dashoffset: 19;
+  //       }
+  //       &.outer {
+  //         stroke-width: 2;
+  //         stroke-dasharray: 57;
+  //         stroke-dashoffset: 57;
+  //       }
+  //     }
+  //   }
+  //   input {
+  //     display: none;
+  //     &:checked + svg {
+  //       path {
+  //         transition: all 0.4s ease;
+  //         &.inner {
+  //           stroke-dashoffset: 38;
+  //           transition-delay: 0.3s;
+  //         }
+  //         &.outer {
+  //           stroke-dashoffset: 0;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
