--- a/client/scss/components/_nav.scss
+++ b/client/scss/components/_nav.scss
@@ -4,3 +4,12 @@
     margin: 1em auto;
     padding: 1em;
 }
+
+.nav .button {
+    margin: auto 0;
+}
+
+.logo {
+    max-height: 8em;
+    max-width: auto;
+}
