--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -1,4 +1,5 @@
 @import "abstracts/index";
+@import "layout/index";
 @import "base/index";
 @import "components/index";
-@import "layout/index";
+@import "media-queries";
