--- a/client/scss/components/_button.scss
+++ b/client/scss/components/_button.scss
@@ -2,7 +2,7 @@
     background-color: $primary-purple;
     border: $white solid 0.05em;
     color: $white;
-    font-size: 1em;
+    font-size: 1.4em;
     margin: 0.4em;
 }
 
@@ -10,8 +10,35 @@
     background-color: $white-20;
     border: $white solid 0.05em;
     color: $primary-purple;
+    box-shadow: 0 0 0 1px $primary-purple;
 }
-  
+
+.button.is-active, .button:active, .button.is-focused, .button:focus {
+  border-color: $primary-purple;
+  color: $white;
+}
+
+.yp .button {
+  width: 60%;
+}
+
+.hp .button {
+  width: 90%;
+}
+
+.help {
+  background-color: $white-20;
+  color: $white;
+  border: $white solid 0.05em;
+}
+
+.help:hover {
+  color: $primary-purple;
+  border: $white solid 0.05em;
+  box-shadow: 0 0 0 1px $primary-purple;
+}
+
+// Fix this stuff!
   .user {
     font-size: 1.2em;
   }
