--- a/client/scss/layout/_background.scss
+++ b/client/scss/layout/_background.scss
@@ -1,11 +1,6 @@
 .hero {
-    background: url("/img/backgrounds/home_background.png") center / cover;
+    background: url("/img/backgrounds/home_background_no_whare.png") center / cover;
     max-width: 100%;
     height: 100%;
-}
-
-.container {
-    text-align: center;
-    width: 90%;
-    margin: 1em auto;
+    justify-content: flex-start;
 }
