--- a/client/scss/_media-queries.scss
+++ b/client/scss/_media-queries.scss
@@ -1,6 +1,7 @@
 @media screen and (max-width: 768px) {
     .hero {
         background: url("/img/backgrounds/home_background_yellow.png") center / cover;
+        height: 100%;
     }
     .home {
         font-size: 80%;
