--- a/client/scss/layout/_background.scss
+++ b/client/scss/layout/_background.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url("/img/backgrounds/home_background.png") center / cover;
+    background: url("/img/backgrounds/home_background_no_whare.png") center / cover;
     background-attachment: fixed;
     max-width: 100%;
     min-height: 100vh;
@@ -9,4 +9,40 @@
     text-align: center;
     width: 90%;
     margin: 1em auto;
+}
+
+.login_background {
+    background: url("/img/backgrounds/blue_background.png") center / cover;
+}
+
+.register_background {
+    background: url("/img/backgrounds/blue_background.png") center / cover;
+}
+
+.home_background {
+    background: url("/img/backgrounds/home_background_no_whare.png") center / cover;
+}
+
+.consent_background {
+    background: url("/img/backgrounds/yellow_background.png") center / cover;
+}
+
+.current_background {
+    background: url("/img/backgrounds/yellow_background.png") center / cover;
+}
+
+.help_background {
+    background: url("/img/backgrounds/blue_background.png") center / cover;
+}
+
+.questions_background {
+    background: url("/img/backgrounds/yellow_background.png") center / cover;
+}
+
+.viewAnswers_background {
+    background: url("/img/backgrounds/blue_background.png") center / cover;
+}
+
+.details_background {
+    background: url("/img/backgrounds/yellow_background.png") center / cover;
 }
