--- a/client/scss/components/_questions.scss
+++ b/client/scss/components/_questions.scss
@@ -48,9 +48,17 @@ border: red 1px solid;
     position: relative;
     width: auto;
   }
+  .listing {
+    right: 5%;
+    float: right;
+    top: 60%;
+    position: relative;
+    width: auto;
+  }
   form {
     top: 60%;
     position: relative;
+    float: right;
   } 
   .qDiv {
     position: relative;
