--- a/client/scss/layout/_background.scss
+++ b/client/scss/layout/_background.scss
@@ -1,5 +1,5 @@
 .hero {
-    background: url("/img/backgrounds/home_background_no_whare.png") center / cover;
+    // background: url("/img/backgrounds/home_background_no_whare.png") center / cover;
     background-attachment: fixed;
     max-width: 100%;
     min-height: 100vh;
