--- a/client/scss/_media-queries.scss
+++ b/client/scss/_media-queries.scss
@@ -1,5 +1,5 @@
 @media screen and (max-width: 768px) {
-    .hero {
+    .home_background {
         background: url("/img/backgrounds/home_background_yellow.png") center / cover;
         height: 100%;
     }
