--- a/client/scss/components/_button.scss
+++ b/client/scss/components/_button.scss
@@ -43,12 +43,12 @@
     font-size: 1.2em;
   }
   
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: inline-block; 
-  }
+  // ul {
+  //   list-style: none;
+  //   padding: 0;
+  //   margin: 0;
+  //   display: inline-block; 
+  // }
   
   .link {  
     margin: 0 auto;
