--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -16,6 +16,7 @@
   font-size: 5vw;
   padding: 5 2 5 2;
 }
+
 .textDetails {
   position: relative;
   height: 45px;
@@ -60,22 +61,12 @@ input[type=text]:focus {
   width: 50%;
 }
 
-.button {
-  background-color: #6A5BA3;
-  border: none;
-  text-align: center;
-  width: 120px;
-  padding: 5 5 5 5;
-  border-radius: 2px;
-  font-weight: bold;
-}
-
-.details .button {
-  background-color: #6A5BA3;
-  border: none;
-  text-align: center;
-  width: 120px;
-  padding: 5 5 5 5;
-  border-radius: 2px;
-  font-weight: bold;
-}
+// .details .button {
+//   background-color: $primary-purple;
+//   border: none;
+//   text-align: center;
+//   width: 120px;
+//   padding: 5 5 5 5;
+//   border-radius: 2px;
+//   font-weight: bold;
+// }
