--- a/client/scss/components/_checkbox.scss
+++ b/client/scss/components/_checkbox.scss
@@ -5,20 +5,20 @@
       rect {
         border-radius: 10%;
         stroke-width: 5;
-        stroke: $white;
+        stroke: $primary-purple;
       }
       path {
-        stroke: $white;
+        stroke: $primary-purple;
         &.inner {
           stroke-width: 6;
           stroke-dasharray: 19;
           stroke-dashoffset: 19;
         }
-        &.outer {
-          stroke-width: 2;
-          stroke-dasharray: 57;
-          stroke-dashoffset: 57;
-        }
+        // &.outer {
+        //   stroke-width: 2;
+        //   stroke-dasharray: 57;
+        //   stroke-dashoffset: 57;
+        // }
       }
     }
     input {
@@ -30,9 +30,9 @@
             stroke-dashoffset: 38;
             transition-delay: 0.3s;
           }
-          &.outer {
-            stroke-dashoffset: 0;
-          }
+        //   &.outer {
+        //     stroke-dashoffset: 0;
+        //   }
         }
       }
     }
