--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 // Colors
 $white: #fff;
 $white-20: rgba(255, 255, 255, 0.2);
+$white-80: rgba(255, 255, 255, 0.8);
 $black: #000;
 $primary-purple: #532c6e;
 $primary-yellow: #eeea29;
