--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -8,57 +8,42 @@
   box-shadow: 5px 8px 18px #888888;
   border-radius: 5px;
   padding: 20px;
-}
 
-.details h1 {
-  color: $primary-purple;
-  font-family: $itim;
-  font-size: 5vw;
-  padding: 5 2 5 2;
-}
+  h1 {
+    color: $primary-purple;
+    font-family: $itim;
+    font-size: 5vw;
+    padding: 5 2 5 2;
+  }
 
-.textDetails {
+
+  .textDetails {
+    position: relative;
+    height: 45px;
+  }
+
+  .radioDetails {
+    position: relative;
+    width: 100%;
+    text-align: left;
+    margin: 5 0 10 0;
+    padding: 0 0 0 5;
+  }
+
+  label {
   position: relative;
-  height: 45px;
-}
-
-.radioDetails {
-  position: relative;
+  float: left;
+  text-align: left;
   width: 100%;
-  text-align: left;
-  margin: 5 0 10 0;
-  padding: 0 0 0 5;
-}
+  padding: 10px 5px 10px 5px;
+  }
 
-label {
-position: relative;
-float: left;
-text-align: left;
-width: 100%;
-padding: 10px 5px 10px 5px;
-}
 
-input[type=text] {
-  background: rgba(208, 205, 148, 0.473);
-  border-radius: 4px;
-  background-color: rgba(208, 205, 148, 0.473);
-  color: #32292F;
-  margin: 0 0 0 15;
-  text-align: left;
-  -webkit-transition: width 0.4s ease-in-out;
-  transition: width 0.4s ease-in-out;
-}
+  .radioDetailsInput {
+    padding: 0 5 0 10;
+  }
 
-.birthInput {
-  background: rgba(208, 205, 148, 0.473);
-}
 
-.radioDetailsInput {
-  padding: 0 5 0 10;
-}
-
-input[type=text]:focus {
-  width: 50%;
 }
 
 // .details .button {
