fixed styling error and class name

--- a/client/scss/components/_slider.scss
+++ b/client/scss/components/_slider.scss
@@ -3,7 +3,7 @@
     -webkit-appearance: none;
     margin: 10px 0;
     width: 100%;
-    color: transparent;
+    background-color: transparent;
   }
 .slider:focus {
     outline: none;
