details styling yo

--- a/client/scss/components/_textfield.scss
+++ b/client/scss/components/_textfield.scss
@@ -8,7 +8,7 @@ input {
 }
 
 .fa-plus{
-    background-color:$white-80;
+    color:$white-80;
     vertical-align: bottom;
     margin-left: 10px;
 }
