--- a/client/scss/components/_questions.scss
+++ b/client/scss/components/_questions.scss
@@ -52,7 +52,7 @@
     padding: 1em;
     font-size: 1.2em;
   }
-  form {
+  .listingForm {
     top: 60%;
     position: relative;
     float: right;
