--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -22,12 +22,16 @@
     text-align: left;
   }
 
-  .radioDetails {
+  .radioDetails, .sliderDetails {
     position: relative;
     width: 100%;
     text-align: left;
     margin: 5 0 10 0;
     padding: 0 0 0 5;
+  }
+
+  .sliderLabels {
+    padding-bottom: 30px;
   }
 
   .radioOtherInput{
