--- a/client/scss/components/_radio.scss
+++ b/client/scss/components/_radio.scss
@@ -7,7 +7,7 @@
       stroke: #c8ccd4;
     }
     path {
-      stroke: #008fff;
+      stroke: $primary-purple;
       &.inner {
         stroke-width: 6;
         stroke-dasharray: 19;
