--- a/client/scss/components/_login.scss
+++ b/client/scss/components/_login.scss
@@ -7,13 +7,13 @@
 vertical-align: top;
 width: 100%;
 margin: 0 0 200 0;
-background: rgba(208, 205, 148, 0.473);
+background: $white-20;
 box-shadow: 5px 8px 18px #888888;
 border-radius: 5px;
 }
 
 .loginInput {
-  background: rgba(208, 205, 148, 0.473);
+  background: $primary-blue;
   border-radius: 5px;
 }
 
