--- a/client/scss/components/_tooltip.scss
+++ b/client/scss/components/_tooltip.scss
@@ -1,14 +1,14 @@
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
+  border-bottom: 1px dotted $white-80;
 }
 
 .tooltip .tooltiptext {
   visibility: hidden;
   width: 200%;
-  background-color: black;
-  color: #fff;
+  background-color: $white-80;
+  color: $primary-purple;
   text-align: center;
   border-radius: 6px;
   padding: 5px 0;
