--- a/client/scss/layout/_background.scss
+++ b/client/scss/layout/_background.scss
@@ -3,6 +3,7 @@
     background-attachment: fixed;
     max-width: 100%;
     min-height: 100vh;
+    justify-content: flex-start;
 }
 
 .container {
