--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -73,6 +73,13 @@
 
 }
 
+.feedback {
+  width: 100%;
+  padding: 50px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
 // .details .button {
 //   background-color: $primary-purple;
 //   border: none;
