scroller scrols to submit at end of array

--- a/client/scss/components/_questions.scss
+++ b/client/scss/components/_questions.scss
@@ -1,7 +1,7 @@
 
-.questionContainer {
-  border: 2px solid red,
-}
+// .questionContainer {
+//   border: 2px solid red,
+// }
 .speech-bubble {
   color: $white;
 	position: relative;
