changed color of description

--- a/client/scss/components/_questions.scss
+++ b/client/scss/components/_questions.scss
@@ -97,6 +97,10 @@
     height: 90vh; 
   }
   
+  #description, #footer{
+    color: #532c6e;
+  }
+
   //   cursor: pointer;
   //   display: inline-block;
   //   float: right;
