fixed listingform etc

--- a/client/scss/abstracts/_variables.scss
+++ b/client/scss/abstracts/_variables.scss
@@ -15,3 +15,6 @@ $architects: 'Architects Daughter', cursive;
 $itim: 'Itim', cursive;
 $cabin: 'Cabin', sans-serif;
 $pt: 'PT Sans Caption', sans-serif;
+
+// Abstract things
+$border-radius: 20px;
