--- a/client/scss/components/_checkbox.scss
+++ b/client/scss/components/_checkbox.scss
@@ -3,7 +3,7 @@
       fill: none;
       vertical-align: middle;
       rect {
-        border-radius: 10%;
+        border-radius: 10%; //Update this with variable?
         stroke-width: 5;
         stroke: $primary-purple;
       }
