--- a/client/scss/components/_current.scss
+++ b/client/scss/components/_current.scss
@@ -3,7 +3,7 @@
   width: 100%;
   background: rgba(208, 205, 148, 0.473);
   box-shadow: 5px 8px 18px #888888;
-  border-radius: 5px;
+  border-radius: $border-radius;
   color: black;
 }
 
