--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -6,7 +6,7 @@
 .details {
   background: $white-20;
   box-shadow: 5px 8px 18px #888888;
-  border-radius: 5px;
+  border-radius: $border-radius;
   padding: 20px;
   font-size: 1.5em
 
