--- a/client/scss/components/_help.scss
+++ b/client/scss/components/_help.scss
@@ -1,7 +1,7 @@
 .helpfeedback {
-    background: rgba(208, 205, 148, 0.473);
+    background: $white-20;
     box-shadow: 5px 8px 18px #888888;
-    border-radius: 5px;
+    border-radius: $border-radius;
     padding: 0px;
     font-size: 1.5em
   
