--- a/client/scss/components/_login.scss
+++ b/client/scss/components/_login.scss
@@ -9,12 +9,12 @@ width: 100%;
 margin: 0 0 200 0;
 background: $white-20;
 box-shadow: 5px 8px 18px #888888;
-border-radius: 5px;
+border-radius: $border-radius;
 }
 
 .loginInput {
   background: $primary-blue;
-  border-radius: 5px;
+  border-radius: $border-radius;
 }
 
 .loginLabel {
