--- a/client/scss/components/_register.scss
+++ b/client/scss/components/_register.scss
@@ -8,14 +8,14 @@
   vertical-align: top;
   width: 100%;
   margin: 0 0 200 0;
-  background: rgba(208, 205, 148, 0.473);
+  background: $white-20;
   box-shadow: 5px 8px 18px #888888;
-  border-radius: 5px;
+  border-radius: $border-radius;
   }
   
 .registerInput {
-  background: rgba(208, 205, 148, 0.473);
-  border-radius: 5px;
+  background: $white-20;
+  border-radius: $border-radius;
 }
   
 .registerLabel {
