--- a/client/scss/components/_tooltip.scss
+++ b/client/scss/components/_tooltip.scss
@@ -11,7 +11,7 @@
   color: $primary-purple;
   text-align: center;
   border-radius: 20px;
-  padding: 5px 0;
+  padding: 5px 2%;
   
   /* Position the tooltip */
   position: absolute;
