--- a/client/scss/components/_consent.scss
+++ b/client/scss/components/_consent.scss
@@ -60,14 +60,14 @@
 
 .modalBody {
   background-color: $primary-yellow; 
-  height: 15em;
+  min-height: 15em;
   padding: 0;
 }
 
 .modalBackground {
   margin: 0;
   width: 100%;
-  height: 15em;
+  min-height: 15em;
   background-color: $white-20;
 }
 
