removed textbox highlight

--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -25,6 +25,9 @@
     text-align: left;
     margin-bottom: 1em;
   }
+  .textDetailsInput:focus {
+    outline: none;
+  }
 
   .radioDetails, .sliderDetails {
     position: relative;
@@ -50,6 +53,10 @@
 
   .radioOtherInput{
     display: block;
+  }
+
+  .radioOtherInput:focus{
+    outline: none;
   }
 
   .radioDetailsInput, .otherRadio{
