--- a/client/scss/base/_typography.scss
+++ b/client/scss/base/_typography.scss
@@ -5,7 +5,7 @@ body {
 
 h1 {
     font-family: $itim;
-    font-size: 5em;
+    font-size: 6vw;
     margin: 4% auto;
     color: $primary-purple;
     text-shadow: 1px 1px $white;
@@ -25,19 +25,20 @@ h2, .button {
 
 h2 {
     color: $primary-purple;
-    font-size: 4em;
+    font-size: 3.5vw;
     margin: 2% auto;
 }
 
 h3 {
     font-family: $cabin;
-    // font-size: 2.5em;
+    font-size: 2vw;
 }
 
 p {
     font-family: $pt;
-    font-size: 2em;
+    font-size: 2vw;
     padding: 4%;
+    color: $primary-purple;
 }
 
 .home {
