--- a/client/scss/components/_consent.scss
+++ b/client/scss/components/_consent.scss
@@ -12,8 +12,7 @@
 .consent p {
   color: $primary-purple;
   margin: 6% auto;
-  // font-size: 2em;
-
+  padding: 0 8%;
 }
 
 .consent p div{
@@ -23,16 +22,22 @@
 
 .consent img {
   margin-top: 6%;
+  width: 70%;
+  height: auto;
+}
+
+.consent h1 {
+  padding-top: $title-padding-top;
+  padding-bottom: 0;
 }
 
 .consent h3 {
   margin-bottom: 4%;
   font-size: 2.5em;
-
 }
 
 .consent .button {
-  width: 120px;
+  width: 10vw;
   margin: 0 6%;
 }
 
