--- a/client/scss/components/_register.scss
+++ b/client/scss/components/_register.scss
@@ -26,3 +26,52 @@ h2 {
   font-size: 25px;
   padding: 5 5 5 5;
 }
+
+.helpfeedback {
+  background: $white-20;
+  box-shadow: 5px 8px 18px #888888;
+  border-radius: $border-radius;
+  padding: 0px;
+  font-size: 1.5em
+
+  h1 {
+    color: $primary-purple;
+    font-family: $itim;
+    font-size: 5vw;
+  }
+
+  .textDetails {
+    text-align: left;
+    margin-bottom: 1em;
+  }
+
+  label {
+    vertical-align: text-bottom;
+    display: block;
+    font-size: 1.1em;
+    margin-left: 0.5em;
+  }
+
+  form{
+    padding: 0em;
+    max-width: 80%;
+    margin: auto;
+    font-size: 1.5em;
+
+    input{
+      margin-left: 1em;
+    }
+  }
+
+  .radioDetailsInput {
+    padding: 0 5 0 10;
+  }
+
+}
+
+.feedback {
+  width: 100%;
+  padding: 50px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
