center modal buttons

--- a/client/scss/components/_consent.scss
+++ b/client/scss/components/_consent.scss
@@ -54,7 +54,9 @@
 }
 
 .modalFoot {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: $primary-blue;
 }
 
