--- a/client/scss/components/_slider.scss
+++ b/client/scss/components/_slider.scss
@@ -57,6 +57,9 @@
 
   .sliderLabelLeft {
     float: left; 
-    width: 0em; 
     margin-right: 1em;
+  }
+
+  .sliderAns{
+    color : $primary-purple;
   }
