--- a/client/scss/components/_button.scss
+++ b/client/scss/components/_button.scss
@@ -18,13 +18,13 @@
   color: $white;
 }
 
-.yp .button {
-  width: 60%;
-}
+// .yp .button {
+//   width: 60%;
+// }
 
-.hp .button {
-  width: 90%;
-}
+// .hp .button {
+//   width: 90%;
+// }
 
 .helpBtn {
   margin: auto;
