--- a/client/scss/components/_help.scss
+++ b/client/scss/components/_help.scss
@@ -3,7 +3,7 @@
     box-shadow: 5px 8px 18px #888888;
     border-radius: $border-radius;
     padding: 0px;
-    font-size: 1.5em
+    font-size: 1.5em;
   
     h1 {
       color: $primary-purple;
