--- a/client/scss/components/_details.scss
+++ b/client/scss/components/_details.scss
@@ -7,7 +7,8 @@
   background: $white-20;
   box-shadow: 5px 8px 18px #888888;
   border-radius: $border-radius;
-  font-size: 1.5em;
+  padding-bottom: 4%;
+  // font-size: 1.5em;
 
   h1 {
     padding-top: $title-padding-top;
