--- a/client/scss/components/_questions.scss
+++ b/client/scss/components/_questions.scss
@@ -56,7 +56,7 @@
   margin-bottom: 10%;
 }
 
-.speech-bubble :after {
+.speech-bubble::after {
 	content: '';
 	position: absolute;
 	bottom: 0;
@@ -70,10 +70,10 @@
 	margin-left: -10px;
   margin-bottom: -20px;  
 }
-  .radio {
-    right: 5%;
-    top: 80%;
-  }
+  // .radio {
+  //   right: 5%;
+  //   top: 80%;
+  // }
   .emojiButtons {
     right: 5%;
     float: right;
@@ -102,6 +102,7 @@
     top: 20%;
     position: relative;
     float: right;
+    font-size: 1em;
   } 
   .qDiv {
     // margin-top: 20%;
