--- a/client/scss/components/_radio.scss
+++ b/client/scss/components/_radio.scss
@@ -1,8 +1,19 @@
-.radio {
-  display: inline-block;
-  width: auto;
+.radio, .radioQuestion {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 50vw;
+  padding: 20px;
+  float: right;
+  align-self: flex-end;
+  text-align: right;
   
+  label {
+    display: inline-block;
+    float: left;
+  }
   svg {
+    margin-right: 1%;
     fill: none;
     vertical-align: middle;
     circle {
@@ -39,7 +50,7 @@
     }
   }
 }
-// .radio .yn {
-//   display: inline-block;
-//   width: auto;
-// }
+.radio .yn {
+  display: inline-block;
+  // width: auto;
+}
